--- a/src/posts/projects/project-140-wellbeing.mdx
+++ b/src/posts/projects/project-140-wellbeing.mdx
@@ -9,27 +9,35 @@ siteLink: https://wellbeing.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/1.png
-      - title: Уровень энергии,
+      - title: Уровень энергии
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/2.png
-      - title: сон,
+      - title: сон
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/3.png
-      - title: Активность,
+      - title: Активность
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/4.png
-      - title: Внимание и эффективность,
+      - title: Внимание и эффективность
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/5.png
-      - title: Общие вопросы,
+      - title: Общие вопросы
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/6.png
-      - title: Стресс,
+      - title: Стресс
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/7.png
       - title: Питание
+      - layout: ../../assets/images/projects/project-140-wellbeing/layout/7.png
 sortIdx: 140
 ---
