--- a/src/posts/projects/project-150-ityu.mdx
+++ b/src/posts/projects/project-150-ityu.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-150-ityu/0.png
       - title: ITYU
+      - layout: ../../assets/images/projects/project-150-ityu/layout/0.png
 sortIdx: 150
 ---
