--- a/src/posts/projects/project-160-starmap.mdx
+++ b/src/posts/projects/project-160-starmap.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-160-starmap/0.png
       - title: StarMap
+      - layout: ../../assets/images/projects/project-160-starmap/layout/0.png
 sortIdx: 160
 ---
