--- a/src/posts/projects/project-180-tachos.mdx
+++ b/src/posts/projects/project-180-tachos.mdx
@@ -9,18 +9,23 @@ siteLink: https://tachosgcmain.gatsbyjs.io/
 pages:
   - page:
       - image: ../../assets/images/projects/project-180-tachos/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-180-tachos/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-180-tachos/1.png
-      - title: Продукт,
+      - title: Продукт
+      - layout: ../../assets/images/projects/project-180-tachos/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-180-tachos/2.png
-      - title: Команда,
+      - title: Команда
+      - layout: ../../assets/images/projects/project-180-tachos/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-180-tachos/3.png
       - title: Инфо
+      - layout: ../../assets/images/projects/project-180-tachos/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-180-tachos/4.png
       - title: Инфо
+      - layout: ../../assets/images/projects/project-180-tachos/layout/4.png
 sortIdx: 180
 ---
