--- a/src/posts/projects/project-190-dr-krisin.mdx
+++ b/src/posts/projects/project-190-dr-krisin.mdx
@@ -9,18 +9,23 @@ siteLink: https://krysin.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-190-krysin/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-190-krysin/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-190-krysin/1.png
-      - title: О докторе,
+      - title: О докторе
+      - layout: ../../assets/images/projects/project-190-krysin/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-190-krysin/2.png
-      - title: Операции,
+      - title: Операции
+      - layout: ../../assets/images/projects/project-190-krysin/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-190-krysin/3.png
-      - title: Статья,
+      - title: Статья
+       - layout: ../../assets/images/projects/project-190-krysin/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-190-krysin/4.png
       - title: Статьи
+      - layout: ../../assets/images/projects/project-190-krysin/layout/4.png
 sortIdx: 190
 ---
