--- a/src/posts/projects/project-200-krutakov.mdx
+++ b/src/posts/projects/project-200-krutakov.mdx
@@ -9,21 +9,27 @@ siteLink: https://krutakov.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-200-krutakov/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/1.png
-      - title: Список-статей,
+      - title: Список-статей
+      - layout: ../../assets/images/projects/project-200-krutakov/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/2.png
-      - title: Статья,
+      - title: Статья
+      - layout: ../../assets/images/projects/project-200-krutakov/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/3.png
-      - title: Об авторе,
+      - title: Об авторе
+      - layout: ../../assets/images/projects/project-200-krutakov/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/4.png
-      - title: Видео,
+      - title: Видео
+      - layout: ../../assets/images/projects/project-200-krutakov/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/5.png
       - title: Контакт
+      - layout: ../../assets/images/projects/project-200-krutakov/layout/5.png
 sortIdx: 200
 ---
