--- a/src/posts/projects/project-210-autoshum.mdx
+++ b/src/posts/projects/project-210-autoshum.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-210-autoshum/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-210-autoshum/layout/0.png
 sortIdx: 210
 ---
