--- a/src/posts/projects/project-220-gradi.mdx
+++ b/src/posts/projects/project-220-gradi.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-220-gardi/0.png
       - title: Gardi
+      - layout: ../../assets/images/projects/project-220-gardi/layout/0.png
 sortIdx: 220
 ---
