--- a/src/posts/projects/project-240-yoga.mdx
+++ b/src/posts/projects/project-240-yoga.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-240-yoga/0.png
       - title: Yoga
+      - layout: ../../assets/images/projects/project-240-yoga/layout/0.jpg
 sortIdx: 240
 ---
