--- a/src/posts/projects/project-250-fitness.mdx
+++ b/src/posts/projects/project-250-fitness.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-250-fitness/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-250-fitness/layout/0.jpg
 sortIdx: 250
 ---
