--- a/src/posts/projects/project-260-multi.mdx
+++ b/src/posts/projects/project-260-multi.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-260-multi/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-260-multi/layout/0.jpg
 sortIdx: 260
 ---
