--- a/src/posts/projects/project-270-ebook.mdx
+++ b/src/posts/projects/project-270-ebook.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-270-ebook/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-270-ebook/layout/0.jpg
 sortIdx: 270
 ---
