--- a/src/posts/projects/project-280-hospital.mdx
+++ b/src/posts/projects/project-280-hospital.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-280-hospital/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-280-hospital/layout/0.jpg
 sortIdx: 280
 ---
