--- a/src/posts/projects/project-290-educational.mdx
+++ b/src/posts/projects/project-290-educational.mdx
@@ -9,7 +9,8 @@ siteLink: https://educational.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-290-educational/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-290-educational/layout/0.jpg
 
 sortIdx: 290
 ---
