--- a/src/posts/projects/project-300-event.mdx
+++ b/src/posts/projects/project-300-event.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-300-event/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-300-event/layout/0.jpg
 sortIdx: 300
 ---
