--- a/src/posts/projects/project-310-estate.mdx
+++ b/src/posts/projects/project-310-estate.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-310-estate/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-310-estate/layout/0.jpg
 sortIdx: 310
 ---
