--- a/src/posts/projects/project-320-medical.mdx
+++ b/src/posts/projects/project-320-medical.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-320-medical/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-320-medical/layout/0.jpg
 sortIdx: 320
 ---
