--- a/src/posts/projects/project-330-decoreto.mdx
+++ b/src/posts/projects/project-330-decoreto.mdx
@@ -9,36 +9,49 @@ siteLink: https://decoreto.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/1.png
-      - title: Категории,
+      - title: Категории
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/3.png
-      - title: Доставка,
+      - title: Доставка
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/4.png
-      - title: Фрезеровка,
+      - title: Фрезеровка
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/5.png
-      - title: Контакты,
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/6.png
-      - title: Мебель,
+      - title: Мебель
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/7.png
-      - title: Компании,
+      - title: Компании
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/8.png
-      - title: Партнерам,
+      - title: Партнерам
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/8.png
+
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/9.png
-      - title: Перегородки,
+      - title: Перегородки
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/9.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/10.png
-      - title: Модальное окно,
+      - title: Модальное окно
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/9.png
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/11.png
       - title: Продукты
+      - layout: ../../assets/images/projects/project-330-decoreto/layout/11.png
+
 sortIdx: 330
 ---
