--- a/src/posts/projects/project-350-the-optical-shop.mdx
+++ b/src/posts/projects/project-350-the-optical-shop.mdx
@@ -9,27 +9,35 @@ siteLink: https://iliagromov.github.io/
 pages:
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/1.png
-      - title: Бренды,
+      - title: Бренды
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/2.png
-      - title: Линзы,
+      - title: Линзы
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/3.png
-      - title: Контакты,
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/4.png
-      - title: Очки,
+      - title: Очки
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/5.png
-      - title: Обзор,
+      - title: Обзор
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/6.png
-      - title: Сервисы,
+      - title: Сервисы
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/7.png
       - title: Солнечные Очки
+      - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/7.png
 sortIdx: 350
 ---
