--- a/src/posts/projects/project-390-confidence.mdx
+++ b/src/posts/projects/project-390-confidence.mdx
@@ -9,9 +9,11 @@ siteLink: https://iliagromov.github.io/
 pages:
   - page:
       - image: ../../assets/images/projects/project-390-confidence/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-390-confidence/layout/0.jpg
   - page:
       - image: ../../assets/images/projects/project-390-confidence/1.png
       - title: Логин
+      - layout: ../../assets/images/projects/project-390-confidence/layout/1.jpg
 sortIdx: 390
 ---
