--- a/src/posts/projects/project-410-danfoss.mdx
+++ b/src/posts/projects/project-410-danfoss.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-410-danfoss/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-410-danfoss/layout/0.png
 sortIdx: 410
 ---
