--- a/src/posts/projects/project-420-pulsar.mdx
+++ b/src/posts/projects/project-420-pulsar.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-420-pulsar/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-420-pulsar/layout/0.png
 sortIdx: 420
 ---
