--- a/src/posts/projects/project-430-evakuator.mdx
+++ b/src/posts/projects/project-430-evakuator.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-430-evakuator/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-430-evakuator/layout/0.png
 sortIdx: 430
 ---
