--- a/src/posts/projects/project-440-obed-ru.mdx
+++ b/src/posts/projects/project-440-obed-ru.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-440-obed-ru/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-440-obed-ru/layout/0.png
 sortIdx: 440
 ---
