--- a/src/posts/projects/project-450-webclim.mdx
+++ b/src/posts/projects/project-450-webclim.mdx
@@ -10,5 +10,10 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-450-webclim/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-450-webclim/layout/0.png
+  - page:
+      - image: ../../assets/images/projects/project-450-webclim/0.png
+      - title: Каталог
+      - layout: ../../assets/images/projects/project-450-webclim/layout/1.png
 sortIdx: 450
 ---
