--- a/src/posts/projects/project-470-moc-ikt.mdx
+++ b/src/posts/projects/project-470-moc-ikt.mdx
@@ -9,9 +9,11 @@ siteLink: https://uslugi.mosreg.ru/
 pages:
   - page:
       - image: ../../assets/images/projects/project-470-moc-ikt/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-470-moc-ikt/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-470-moc-ikt/1.png
       - title: Первый класс
+      - layout: ../../assets/images/projects/project-470-moc-ikt/layout/1.png
 sortIdx: 470
 ---
