--- a/src/posts/projects/project-230-wedding.mdx
+++ b/src/posts/projects/project-230-wedding.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-230-wedding/0.png
       - title: Wedding
+      - layout: ../../assets/images/projects/project-230-wedding/layout/0.png
 sortIdx: 230
 ---
