--- a/src/posts/projects/project-360-akvahit.mdx
+++ b/src/posts/projects/project-360-akvahit.mdx
@@ -9,39 +9,51 @@ siteLink: https://akvahit.ru/sitemap-html/
 pages:
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/1.png
-      - title: О нас,
+      - title: О нас
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/2.png
-      - title: Бренды,
+      - title: Бренды
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/3.png
-      - title: Корзина,
+      - title: Корзина
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/4.png
-      - title: Контакты,
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/5.png
-      - title: Доставка,
+      - title: Доставка
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/6.png
-      - title: Гарантия,
+      - title: Гарантия
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/7.png
-      - title: Заказ,
+      - title: Заказ
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/8.png
-      - title: Оплата,
+      - title: Оплата
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/8.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/9.png
-      - title: Продукты,
+      - title: Продукты
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/9.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/10.png
-      - title: Возврат,
+      - title: Возврат
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/10.png
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/11.png
       - title: Детали
+      - layout: ../../assets/images/projects/project-360-akvahit/layout/11.png
 sortIdx: 360
 ---
