--- a/src/posts/projects/project-380-finansinvest.mdx
+++ b/src/posts/projects/project-380-finansinvest.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-380-finansinvest/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-380-finansinvest/layout/0.png
 sortIdx: 380
 ---
