--- a/src/posts/projects/project-460-bookkeeping.mdx
+++ b/src/posts/projects/project-460-bookkeeping.mdx
@@ -9,27 +9,35 @@ siteLink: https://iliagromov.github.io/
 pages:
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/1.png
-      - title: Счет,
+      - title: Счет
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/2.png
-      - title: История,
+      - title: История
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/3.png
-      - title: Страница истории,
+      - title: Страница истории
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/4.png
-      - title: Логин,
+      - title: Логин
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/5.png
-      - title: Планирование,
+      - title: Планирование
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/4.png
-      - title: Регистрация,
+      - title: Регистрация
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/7.png
       - title: Группы
+      - layout: ../../assets/images/projects/project-460-bookkeeping/layout/7.png
 sortIdx: 460
 ---
