--- a/src/posts/projects/project-510.mdx
+++ b/src/posts/projects/project-510.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-500-protector-shop/0.png
       - title: Protector Shop
+      - layout: ../../assets/images/projects/project-500-protector-shop/layout/0.png
 sortIdx: 500
 ---
