--- a/src/posts/projects/project-340-ids.mdx
+++ b/src/posts/projects/project-340-ids.mdx
@@ -17,47 +17,47 @@ pages:
       - layout: ../../assets/images/projects/project-340-ids/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/2.png
-      - title: 404,
+      - title: 404
       - layout: ../../assets/images/projects/project-340-ids/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/3.png
-      - title: О нас,
+      - title: О нас
       - layout: ../../assets/images/projects/project-340-ids/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/4.png
-      - title: Архив,
+      - title: Архив
       - layout: ../../assets/images/projects/project-340-ids/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/5.png
-      - title: Журнал,
+      - title: Журнал
       - layout: ../../assets/images/projects/project-340-ids/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/6.png
-      - title: Журнал 2,
+      - title: Журнал 2
       - layout: ../../assets/images/projects/project-340-ids/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/7.png
-      - title: Контакты,
+      - title: Контакты
       - layout: ../../assets/images/projects/project-340-ids/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/8.png
-      - title: Категории,
+      - title: Категории
       - layout: ../../assets/images/projects/project-340-ids/layout/8.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/9.png
-      - title: Новости,
+      - title: Новости
       - layout: ../../assets/images/projects/project-340-ids/layout/9.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/10.png
-      - title: Партнеры,
+      - title: Партнеры
       - layout: ../../assets/images/projects/project-340-ids/layout/10.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/11.png
-      - title: Патенты,
+      - title: Патенты
       - layout: ../../assets/images/projects/project-340-ids/layout/11.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/12.png
-      - title: Попап,
+      - title: Попап
       - layout: ../../assets/images/projects/project-340-ids/layout/12.png
   - page:
       - image: ../../assets/images/projects/project-340-ids/13.png
