--- a/src/posts/projects/project-02-soa.mdx
+++ b/src/posts/projects/project-02-soa.mdx
@@ -11,6 +11,14 @@ pages:
       - image: ../../assets/images/projects/project-02-soa/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-02-soa/layout/0.png
+  - page:
+      - image: ../../assets/images/projects/project-02-soa/1.png
+      - title: Главная
+      - layout: ../../assets/images/projects/project-02-soa/layout/1.png
+  - page:
+      - image: ../../assets/images/projects/project-02-soa/2.png
+      - title: Главная
+      - layout: ../../assets/images/projects/project-02-soa/layout/2.png
 
 sortIdx: 3
 ---
