--- a/src/posts/projects/project-04-home.mdx
+++ b/src/posts/projects/project-04-home.mdx
@@ -1,8 +1,8 @@
 ---
-slug: soa
-link: /projects/soa/
+slug: domznaniy
+link: /projects/domznaniy/
 category: "projects"
-title: Soa
+title: domznaniy
 publicData: Oct 16th 2025
 pagesCount: 1
 siteLink: igromov.digital
