Добвавил фиксы по проектам для деплоя

--- a/src/posts/projects/project-01-100p.mdx
+++ b/src/posts/projects/project-01-100p.mdx
@@ -2,7 +2,7 @@
 slug: 100p
 link: /projects/100p/
 category: "projects"
-title: 100 p
+title: 100 бальный репетитор
 publicData: Oct 16th 2025
 pagesCount: 50
 siteLink: igromov.digital
