--- a/src/posts/projects/project-01-tst.mdx
+++ b/src/posts/projects/project-01-tst.mdx
@@ -2,9 +2,9 @@
 slug: tst
 link: /projects/tst/
 category: "projects"
-title: tst
+title: Проект Юлии Железняк
 publicData: Oct 16th 2025
-pagesCount: 50
+pagesCount: 1
 siteLink: igromov.digital
 pages:
   - page:
