--- a/src/posts/projects/project-02-soa.mdx
+++ b/src/posts/projects/project-02-soa.mdx
@@ -2,7 +2,7 @@
 slug: soa
 link: /projects/soa/
 category: "projects"
-title: Soa
+title: Для А.Путина
 publicData: Oct 16th 2025
 pagesCount: 1
 siteLink: igromov.digital
