--- a/src/posts/projects/project-03-topseller.mdx
+++ b/src/posts/projects/project-03-topseller.mdx
@@ -2,7 +2,7 @@
 slug: topseller
 link: /projects/topseller/
 category: "projects"
-title: topseller
+title: Topseller
 publicData: Oct 16th 2025
 pagesCount: 5
 siteLink: igromov.digital
