--- a/src/posts/projects/project-04-home.mdx
+++ b/src/posts/projects/project-04-home.mdx
@@ -2,7 +2,7 @@
 slug: domznaniy
 link: /projects/domznaniy/
 category: "projects"
-title: domznaniy
+title: Дом знаний
 publicData: Oct 16th 2025
 pagesCount: 1
 siteLink: igromov.digital
