Added project link

--- a/src/posts/projects/project-09-openfactoring.mdx
+++ b/src/posts/projects/project-09-openfactoring.mdx
@@ -3,9 +3,9 @@ slug: openfactoring
 link: /projects/openfactoring/
 category: "projects"
 title: Факторинг Открытие
-publicData: Sep 11th 2020
+publicData: Sep 11th 2021
 pagesCount: 22
-siteLink: https://openfactoring.igromov.digital/
+siteLink: https://demo.gromov.digital/factoring/sitemap/sitemap.html
 pages:
   - page:
       - title: Главная
