--- a/src/posts/projects/project-40-admiral-club.mdx
+++ b/src/posts/projects/project-40-admiral-club.mdx
@@ -3,9 +3,9 @@ slug: admiral-club
 link: /projects/admiral-club/
 category: "projects"
 title: Admiral Club
-publicData: Sep 11th 2020
+publicData: Sep 2022
 pagesCount: 13
-siteLink: https://admiral-club.igromov.digital
+siteLink: https://demo.gromov.digital/admiral/
 pages:
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/0.png
