--- a/src/posts/projects/project-20-montetuning.mdx
+++ b/src/posts/projects/project-20-montetuning.mdx
@@ -3,37 +3,65 @@ slug: montetuning
 link: /projects/montetuning/
 category: "projects"
 title: Montetuning
-publicData: Sep 11th 2020
+publicData: Sep 2021
 pagesCount: 7
-siteLink: https://montetuning.com/
+siteLink: https://demo.gromov.digital/monte
 pages:
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/0.png
-      - title: main
+      - title: Главная
       - layout: ../../assets/images/projects/project-20-montetuning/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/1.png
-      - title: GT
+      - title: Товар GT
       - layout: ../../assets/images/projects/project-20-montetuning/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/2.png
-      - title: GTR
+      - title: Товар GTR
       - layout: ../../assets/images/projects/project-20-montetuning/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/3.png
-      - title: Shop
+      - title: Корзина
       - layout: ../../assets/images/projects/project-20-montetuning/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/4.png
-      - title: Shop2
+      - title: Магазин
       - layout: ../../assets/images/projects/project-20-montetuning/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/5.png
-      - title: instuction
+      - title: Инструкция
       - layout: ../../assets/images/projects/project-20-montetuning/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/6.png
       - title: Faq
       - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/6.png
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/6.png
+      - title: Поддержка
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/6.png
+      - title: Партнеры
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/6.png
+      - title: Отзывы
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/6.png
+      - title: Новости
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/6.png
+      - title: Новость
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
+  - page:
+      - image: ../../assets/images/projects/project-20-montetuning/0.png
+      - title: seo шаблоны
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/0.png
 sortIdx: 20
 ---
