--- a/src/posts/projects/project-30-temnay-faza.mdx
+++ b/src/posts/projects/project-30-temnay-faza.mdx
@@ -1,11 +1,11 @@
 ---
-slug: temnay-faza
-link: /projects/temnay-faza/
+slug: tfaza
+link: /projects/tfaza/
 category: "projects"
 title: Темная Фаза
-publicData: Sep 11th 2020
+publicData: Apr 2021
 pagesCount: 11
-siteLink: https://temnayafaza.igromov.digital/
+siteLink: https://demo.gromov.digital/tfaza/
 pages:
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/0.png
