--- a/src/posts/projects/project-70-acpgame.mdx
+++ b/src/posts/projects/project-70-acpgame.mdx
@@ -3,9 +3,9 @@ slug: acpgame
 link: /projects/acpgame/
 category: "projects"
 title: ACPGAME
-publicData: Sep 11th 2020
+publicData: Dec 2020
 pagesCount: 10
-siteLink: https://acpgame.igromov.digital/
+siteLink: https://demo.gromov.digital/acpgame/
 pages:
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/0.png
