--- a/src/posts/projects/project-10-rschip.mdx
+++ b/src/posts/projects/project-10-rschip.mdx
@@ -3,15 +3,14 @@ slug: rschip
 link: /projects/rschip/
 category: "projects"
 title: Rschip
-publicData: Sep 11th 2020
+publicData: Nov 2022
 pagesCount: 9
-siteLink: https://rschip.igromov.digital/
+siteLink: https://demo.gromov.digital/rschip/
 pages:
   - page:
       - image: ../../assets/images/projects/project-10-rschip/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-10-rschip/layout/0.png
-
   - page:
       - image: ../../assets/images/projects/project-10-rschip/1.png
       - title: Страница товара RS
