Исправил ссылки на проекты

--- a/src/posts/projects/project-01-tst.mdx
+++ b/src/posts/projects/project-01-tst.mdx
@@ -3,9 +3,9 @@ slug: tst
 link: /projects/tst/
 category: "projects"
 title: Проект Юлии Железняк
-publicData: Oct 16th 2025
+publicData: Oct 2025
 pagesCount: 1
-siteLink: igromov.digital
+siteLink: https://i.gromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-tst/0.png
