--- a/src/posts/projects/project-01-yoga.mdx
+++ b/src/posts/projects/project-01-yoga.mdx
@@ -3,9 +3,9 @@ slug: namasteysha
 link: /projects/namasteysha/
 category: "projects"
 title: Namasteysha Yoga Home
-publicData: Oct 16th 2025
+publicData: Oct 2025
 pagesCount: 1
-siteLink: igromov.digital
+siteLink: https://i.gromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-namasteysha/0.png
