--- a/src/posts/projects/project-02-leily-yoga-ru.mdx
+++ b/src/posts/projects/project-02-leily-yoga-ru.mdx
@@ -2,14 +2,14 @@
 slug: cosmospose
 link: /projects/cosmospose/
 category: "projects"
-title: Yoga
-publicData: Sep 11th 2020
+title: Лейла Йога
+publicData: Feb 2022
 pagesCount: 1
-siteLink: https://cosmospose.igromov.digital/
+siteLink: https://demo.gromov.digital/leily-yoga/
 pages:
   - page:
       - image: ../../assets/images/projects/project-60-cosmospose/0.png
-      - title: Title
+      - title: Главная
       - layout: ../../assets/images/projects/project-60-cosmospose/layout/0.png
-sortIdx: 60
+sortIdx: 6
 ---
