--- a/src/posts/projects/project-02-soa.mdx
+++ b/src/posts/projects/project-02-soa.mdx
@@ -3,9 +3,9 @@ slug: soa
 link: /projects/soa/
 category: "projects"
 title: Для А.Путина
-publicData: Oct 16th 2025
+publicData: Oct 2023
 pagesCount: 1
-siteLink: igromov.digital
+siteLink: https://preview.webflow.com/preview/soabridge?preview=0d5e075160042af87f3bc3988c01e1c4&workflow=sitePreview
 pages:
   - page:
       - image: ../../assets/images/projects/project-02-soa/0.png
