--- a/src/posts/projects/project-03-topseller.mdx
+++ b/src/posts/projects/project-03-topseller.mdx
@@ -3,9 +3,9 @@ slug: topseller
 link: /projects/topseller/
 category: "projects"
 title: Topseller
-publicData: Oct 16th 2025
+publicData: Oct 2025
 pagesCount: 5
-siteLink: igromov.digital
+siteLink: https://demo.gromov.digital/topseller/
 pages:
   - page:
       - image: ../../assets/images/projects/project-03-topseller/0.png
