--- a/src/posts/projects/project-04-domznaniy.mdx
+++ b/src/posts/projects/project-04-domznaniy.mdx
@@ -3,9 +3,9 @@ slug: domznaniy
 link: /projects/domznaniy/
 category: "projects"
 title: Дом знаний
-publicData: Oct 16th 2025
+publicData: Oct 2025
 pagesCount: 1
-siteLink: igromov.digital
+siteLink: https://demo.gromov.digital/domznaniy/
 pages:
   - page:
       - image: ../../assets/images/projects/project-04-home-ed/0.png
