--- a/src/posts/projects/project-110-hristina-cosmetics.mdx
+++ b/src/posts/projects/project-110-hristina-cosmetics.mdx
@@ -1,11 +1,11 @@
 ---
-slug: hristina-cosmetics
-link: /projects/hristina-cosmetics/
+slug: h-cosmetics
+link: /projects/h-cosmetics/
 category: "projects"
 title: Hristina-Cosmetics
-publicData: Sep 11th 2020
+publicData: Aug 2021
 pagesCount: 10
-siteLink: https://hristina-cosmetics.igromov.digital/
+siteLink: https://demo.gromov.digital/h-cosmetics/
 pages:
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/0.png
@@ -15,7 +15,6 @@ pages:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/1.png
       - title: Возврат
       - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/1.png
-      
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/2.png
       - title: Список-желаний
