--- a/src/posts/projects/project-120-mark-landing-project.mdx
+++ b/src/posts/projects/project-120-mark-landing-project.mdx
@@ -1,11 +1,11 @@
 ---
-slug: mark-landing-project
-link: /projects/mark-landing-project/
+slug: mark
+link: /projects/mark/
 category: "projects"
 title: Mark-Landing
-publicData: Sep 11th 2020
+publicData: Feb 2021
 pagesCount: 1
-siteLink: https://mark-landing.igromov.digital/
+siteLink: https://demo.gromov.digital/mark/
 pages:
   - page:
       - image: ../../assets/images/projects/project-120-mark-landing-project/0.png
