--- a/src/posts/projects/project-131-interstitial.mdx
+++ b/src/posts/projects/project-131-interstitial.mdx
@@ -1,15 +1,15 @@
 ---
-slug: rogersservices
-link: /projects/rogersservices/
+slug: rogersserviinterstitialces
+link: /projects/interstitial/
 category: "projects"
-title: Rogers-services
+title: Interstitial
 publicData: Feb 2021
 pagesCount: 1
-siteLink: https://demo.gromov.digital/rogersservices/
+siteLink: https://demo.gromov.digital/interstitial/
 pages:
   - page:
       - image: ../../assets/images/projects/project-130-rogersservices/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-130-rogersservices/layout/0.png
-sortIdx: 130
+sortIdx: 131
 ---
