--- a/src/posts/projects/project-140-wellbeing.mdx
+++ b/src/posts/projects/project-140-wellbeing.mdx
@@ -3,9 +3,9 @@ slug: wellbeing
 link: /projects/wellbeing/
 category: "projects"
 title: Wellbeing
-publicData: Sep 11th 2020
+publicData: Mart 2021
 pagesCount: 8
-siteLink: https://wellbeing.igromov.digital/
+siteLink: https://demo.gromov.digital/wellbeing-ru/
 pages:
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/0.png
