--- a/src/posts/projects/project-190-dr-krisin.mdx
+++ b/src/posts/projects/project-190-dr-krisin.mdx
@@ -3,9 +3,9 @@ slug: krysin
 link: /projects/krysin/
 category: "projects"
 title: DR-Krisin
-publicData: Sep 11th 2020
+publicData: Sep 2021
 pagesCount: 5
-siteLink: https://krysin.igromov.digital/
+siteLink: https://www.behance.net/gallery/161661005/DR-Krisin-Project
 pages:
   - page:
       - image: ../../assets/images/projects/project-190-krysin/0.png
