--- a/src/posts/projects/project-200-krutakov.mdx
+++ b/src/posts/projects/project-200-krutakov.mdx
@@ -3,9 +3,9 @@ slug: krutakov
 link: /projects/krutakov/
 category: "projects"
 title: Krutakov
-publicData: Sep 11th 2020
+publicData: Sep 2021
 pagesCount: 6
-siteLink: https://krutakov.igromov.digital/
+siteLink: https://demo.gromov.digital/krutakov/
 pages:
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/0.png
