--- a/src/posts/projects/project-210-autoshum.mdx
+++ b/src/posts/projects/project-210-autoshum.mdx
@@ -3,9 +3,9 @@ slug: autoshum
 link: /projects/autoshum/
 category: "projects"
 title: Автошум
-publicData: Sep 11th 2020
+publicData: May 2021
 pagesCount: 1
-siteLink: https://autoshum.igromov.digital/
+siteLink: https://www.behance.net/gallery/161603779/avtoshum-project
 pages:
   - page:
       - image: ../../assets/images/projects/project-210-autoshum/0.png
