--- a/src/posts/projects/project-250-fitness.mdx
+++ b/src/posts/projects/project-250-fitness.mdx
@@ -3,9 +3,9 @@ slug: fitness
 link: /projects/fitness/
 category: "projects"
 title: Fitness
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://fitness.igromov.digital/
+siteLink: https://demo.gromov.digital/fitness/
 pages:
   - page:
       - image: ../../assets/images/projects/project-250-fitness/0.png
