--- a/src/posts/projects/project-260-multi.mdx
+++ b/src/posts/projects/project-260-multi.mdx
@@ -3,9 +3,9 @@ slug: multi
 link: /projects/multi/
 category: "projects"
 title: Multi
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://multi.igromov.digital/
+siteLink: https://demo.gromov.digital/multipurpose/
 pages:
   - page:
       - image: ../../assets/images/projects/project-260-multi/0.png
