--- a/src/posts/projects/project-280-hospital.mdx
+++ b/src/posts/projects/project-280-hospital.mdx
@@ -3,9 +3,9 @@ slug: hospital
 link: /projects/ebook/
 category: "projects"
 title: hospital
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://ebook.igromov.digital/
+siteLink: https://demo.gromov.digital/hospital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-280-hospital/0.png
