--- a/src/posts/projects/project-290-educational.mdx
+++ b/src/posts/projects/project-290-educational.mdx
@@ -3,9 +3,9 @@ slug: educational
 link: /projects/educational/
 category: "projects"
 title: Edication
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 2
-siteLink: https://educational.igromov.digital/
+siteLink: https://demo.gromov.digital/educational/
 pages:
   - page:
       - image: ../../assets/images/projects/project-290-educational/0.png
