--- a/src/posts/projects/project-300-event.mdx
+++ b/src/posts/projects/project-300-event.mdx
@@ -3,9 +3,9 @@ slug: event
 link: /projects/event/
 category: "projects"
 title: Event
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://event.igromov.digital/
+siteLink: https://demo.gromov.digital/event/
 pages:
   - page:
       - image: ../../assets/images/projects/project-300-event/0.png
