--- a/src/posts/projects/project-310-estate.mdx
+++ b/src/posts/projects/project-310-estate.mdx
@@ -3,9 +3,9 @@ slug: estate
 link: /projects/estate/
 category: "projects"
 title: Estate
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://estate.igromov.digital/
+siteLink: https://demo.gromov.digital/estate/
 pages:
   - page:
       - image: ../../assets/images/projects/project-310-estate/0.png
