--- a/src/posts/projects/project-320-medical.mdx
+++ b/src/posts/projects/project-320-medical.mdx
@@ -3,9 +3,9 @@ slug: medical
 link: /projects/medical/
 category: "projects"
 title: Medical
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://medical.igromov.digital/
+siteLink: https://demo.gromov.digital/medical/
 pages:
   - page:
       - image: ../../assets/images/projects/project-320-medical/0.png
