--- a/src/posts/projects/project-330-decoreto.mdx
+++ b/src/posts/projects/project-330-decoreto.mdx
@@ -3,9 +3,9 @@ slug: decoreto
 link: /projects/decoreto/
 category: "projects"
 title: Decoreto
-publicData: Sep 11th 2020
+publicData: Aug 2019
 pagesCount: 11
-siteLink: https://decoreto.igromov.digital/
+siteLink: https://www.behance.net/gallery/94520401/Decoreto
 pages:
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/0.png
