--- a/src/posts/projects/project-340-ids.mdx
+++ b/src/posts/projects/project-340-ids.mdx
@@ -3,9 +3,9 @@ slug: ids
 link: /projects/ids/
 category: "projects"
 title: IdsMediad
-publicData: Sep 11th 2020
+publicData: Sep 2018
 pagesCount: 14
-siteLink: https://sectormedia.ru/
+siteLink: https://www.behance.net/gallery/94520343/ids
 pages:
   - page:
       - image: ../../assets/images/projects/project-340-ids/0.png
