--- a/src/posts/projects/project-350-the-optical-shop.mdx
+++ b/src/posts/projects/project-350-the-optical-shop.mdx
@@ -3,9 +3,9 @@ slug: the-optical-shop
 link: /projects/the-optical-shop/
 category: "projects"
 title: The-optical-shop
-publicData: Sep 11th 2020
+publicData: Sep 2018
 pagesCount: 8
-siteLink: https://iliagromov.github.io/
+siteLink: https://www.behance.net/gallery/94513881/Theopticalshop
 pages:
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/0.png
