--- a/src/posts/projects/project-360-akvahit.mdx
+++ b/src/posts/projects/project-360-akvahit.mdx
@@ -3,9 +3,9 @@ slug: akvahit
 link: /projects/akvahit/
 category: "projects"
 title: Akvahit
-publicData: Sep 11th 2020
+publicData: May 2017
 pagesCount: 12
-siteLink: https://akvahit.ru/sitemap-html/
+siteLink: https://www.behance.net/gallery/82263873/verstka-glavnoj-stranicy-sajta-akvahit-redizajn
 pages:
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/0.png
