--- a/src/posts/projects/project-390-confidence.mdx
+++ b/src/posts/projects/project-390-confidence.mdx
@@ -3,9 +3,9 @@ slug: confidence
 link: /projects/confidence/
 category: "projects"
 title: confidence
-publicData: Sep 11th 2020
+publicData: Nov 2020
 pagesCount: 2
-siteLink: https://iliagromov.github.io/
+siteLink: https://demo.gromov.digital/confidenceuicms/
 pages:
   - page:
       - image: ../../assets/images/projects/project-390-confidence/0.png
