--- a/src/posts/projects/project-400-euchet.mdx
+++ b/src/posts/projects/project-400-euchet.mdx
@@ -3,9 +3,9 @@ slug: euchet
 link: /projects/euchet/
 category: "projects"
 title: Euchet
-publicData: Sep 11th 2020
+publicData: Sep 2017
 pagesCount: 1
-siteLink: https://iliagromov.github.io/
+siteLink: https://www.behance.net/gallery/94523611/euchet
 pages:
   - page:
       - image: ../../assets/images/projects/project-400-euchet/0.png
