--- a/src/posts/projects/project-410-danfoss.mdx
+++ b/src/posts/projects/project-410-danfoss.mdx
@@ -3,9 +3,9 @@ slug: danfoss
 link: /projects/danfoss/
 category: "projects"
 title: Danfoss
-publicData: Sep 11th 2020
+publicData: Sep 2017
 pagesCount: 1
-siteLink: https://danfoss.igromov.digital/
+siteLink: https://www.behance.net/gallery/82263817/verstka-lendinga-Danfoss-dlja-sajta-akvahit
 pages:
   - page:
       - image: ../../assets/images/projects/project-410-danfoss/0.png
