--- a/src/posts/projects/project-420-pulsar.mdx
+++ b/src/posts/projects/project-420-pulsar.mdx
@@ -3,9 +3,9 @@ slug: pulsar
 link: /projects/pulsar/
 category: "projects"
 title: Pulsar
-publicData: Sep 11th 2020
+publicData: Sep 2017
 pagesCount: 1
-siteLink: https://pulsar.igromov.digital/
+siteLink: https://www.behance.net/gallery/69706579/verstkaprototiplendinga-dlja-sajta-akavhit
 pages:
   - page:
       - image: ../../assets/images/projects/project-420-pulsar/0.png
