--- a/src/posts/projects/project-430-evakuator.mdx
+++ b/src/posts/projects/project-430-evakuator.mdx
@@ -3,9 +3,9 @@ slug: evakuator
 link: /projects/evakuator/
 category: "projects"
 title: Evakuator
-publicData: Sep 11th 2020
+publicData: Sep 2017
 pagesCount: 1
-siteLink: https://evakuator.igromov.digital/
+siteLink: https://www.behance.net/gallery/69706125/sozdanie-sajta-pod-kljuch-evakuatory24
 pages:
   - page:
       - image: ../../assets/images/projects/project-430-evakuator/0.png
