--- a/src/posts/projects/project-440-obed-ru.mdx
+++ b/src/posts/projects/project-440-obed-ru.mdx
@@ -3,9 +3,9 @@ slug: obed-ru
 link: /projects/obed-ru/
 category: "projects"
 title: Obed-ru
-publicData: Sep 11th 2020
+publicData: Sep 2017
 pagesCount: 1
-siteLink: https://iliagromov.github.io/
+siteLink: https://www.behance.net/gallery/69704945/verstka-stranicy-s-akciej-dlja-Obedru
 pages:
   - page:
       - image: ../../assets/images/projects/project-440-obed-ru/0.png
