--- a/src/posts/projects/project-460-bookkeeping.mdx
+++ b/src/posts/projects/project-460-bookkeeping.mdx
@@ -3,9 +3,9 @@ slug: bookkeeping
 link: /projects/bookkeeping/
 category: "projects"
 title: Bookkeeping
-publicData: Sep 11th 2020
+publicData: Aug 2019
 pagesCount: 8
-siteLink: https://iliagromov.github.io/
+siteLink: https://i.gromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/0.png
