--- a/src/posts/projects/project-470-moc-ikt.mdx
+++ b/src/posts/projects/project-470-moc-ikt.mdx
@@ -3,9 +3,9 @@ slug: moc-ikt
 link: /projects/moc-ikt/
 category: "projects"
 title: ГКУ МОЦ ИКТ
-publicData: Sep 11th 2020
+publicData: Jan 2019
 pagesCount: 1
-siteLink: https://uslugi.mosreg.ru/
+siteLink: https://i.gromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-470-moc-ikt/0.png
