--- a/src/posts/projects/project-500-protector-shop.mdx
+++ b/src/posts/projects/project-500-protector-shop.mdx
@@ -3,9 +3,9 @@ slug: protector-shop
 link: /projects/protector-shop/
 category: "projects"
 title: Protector Shop
-publicData: Sep 11th 2020
+publicData: Mart 2016
 pagesCount: 1
-siteLink: https://protector-shop.igromov.digital/
+siteLink: https://demo.gromov.digital/protector-shop/
 pages:
   - page:
       - image: ../../assets/images/projects/project-500-protector-shop/0.png
