--- a/src/posts/projects/project-90-holybasil.mdx
+++ b/src/posts/projects/project-90-holybasil.mdx
@@ -3,9 +3,9 @@ slug: holybasil
 link: /projects/holybasil/
 category: "projects"
 title: Holybasil
-publicData: Sep 11th 2020
+publicData: Jan 2021
 pagesCount: 3
-siteLink: https://holybasil.igromov.digital/
+siteLink: https://demo.gromov.digital/holybasil/
 pages:
   - page:
       - image: ../../assets/images/projects/project-90-holybasil/0.png
