--- a/src/posts/projects/project-01-100p.mdx
+++ b/src/posts/projects/project-01-100p.mdx
@@ -2,10 +2,10 @@
 slug: 100p
 link: /projects/100p/
 category: "projects"
-title: 100 бальный репетитор
-publicData: Oct 16th 2025
+title: 100 балльный репетитор
+publicData: Oct 2025
 pagesCount: 50
-siteLink: igromov.digital
+siteLink: https://i.gromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-100p/0.png
