--- a/src/posts/projects/project-100-pichshop.mdx
+++ b/src/posts/projects/project-100-pichshop.mdx
@@ -3,9 +3,9 @@ slug: pichshop
 link: /projects/pichshop/
 category: "projects"
 title: Pichshop
-publicData: Sep 11th 2020
+publicData: Feb 2022
 pagesCount: 1
-siteLink: https://www.pichshop.ru/
+siteLink: https://www.behance.net/gallery/161894123/Pichshop-project
 pages:
   - page:
       - image: ../../assets/images/projects/project-100-pichshop/0.png
