--- a/src/posts/projects/project-150-ityu.mdx
+++ b/src/posts/projects/project-150-ityu.mdx
@@ -3,9 +3,9 @@ slug: ityu
 link: /projects/ityu/
 category: "projects"
 title: ITYU
-publicData: Sep 11th 2020
+publicData: Jul 2022
 pagesCount: 1
-siteLink: https://ityu.igromov.digital/
+siteLink: https://www.behance.net/gallery/161661629/ITYU-Project
 pages:
   - page:
       - image: ../../assets/images/projects/project-150-ityu/0.png
