--- a/src/posts/projects/project-160-starmap.mdx
+++ b/src/posts/projects/project-160-starmap.mdx
@@ -3,9 +3,9 @@ slug: starmap
 link: /projects/starmap/
 category: "projects"
 title: StarMap
-publicData: Sep 11th 2020
+publicData: Feb 2022
 pagesCount: 1
-siteLink: https://starmap.igromov.digital/
+siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
 pages:
   - page:
       - image: ../../assets/images/projects/project-160-starmap/0.png
