--- a/src/posts/projects/project-180-tachos.mdx
+++ b/src/posts/projects/project-180-tachos.mdx
@@ -3,9 +3,9 @@ slug: tachos
 link: /projects/tachos/
 category: "projects"
 title: Tachos
-publicData: Sep 11th 2020
+publicData: Sep 2022
 pagesCount: 4
-siteLink: https://tachosgcmain.gatsbyjs.io/
+siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
 pages:
   - page:
       - image: ../../assets/images/projects/project-180-tachos/0.png
