--- a/src/posts/projects/project-220-gradi.mdx
+++ b/src/posts/projects/project-220-gradi.mdx
@@ -3,9 +3,9 @@ slug: gardi
 link: /projects/gardi/
 category: "projects"
 title: Gradi
-publicData: Sep 11th 2020
+publicData: Feb 2021
 pagesCount: 1
-siteLink: https://gardi.ru/
+siteLink: https://www.behance.net/gallery/161602003/Gardi-Project
 pages:
   - page:
       - image: ../../assets/images/projects/project-220-gardi/0.png
