--- a/src/posts/projects/project-230-wedding.mdx
+++ b/src/posts/projects/project-230-wedding.mdx
@@ -3,9 +3,9 @@ slug: wedding
 link: /projects/wedding/
 category: "projects"
 title: Wedding
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://wedding.igromov.digital/
+siteLink: https://demo.gromov.digital/wedding/
 pages:
   - page:
       - image: ../../assets/images/projects/project-230-wedding/0.png
