--- a/src/posts/projects/project-240-yoga.mdx
+++ b/src/posts/projects/project-240-yoga.mdx
@@ -3,9 +3,9 @@ slug: yoga
 link: /projects/yoga/
 category: "projects"
 title: Yoga
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://yoga.igromov.digital/
+siteLink: https://demo.gromov.digital/yoga-ca/
 pages:
   - page:
       - image: ../../assets/images/projects/project-240-yoga/0.png
