--- a/src/posts/projects/project-270-ebook.mdx
+++ b/src/posts/projects/project-270-ebook.mdx
@@ -3,9 +3,9 @@ slug: ebook
 link: /projects/ebook/
 category: "projects"
 title: Ebook
-publicData: Sep 11th 2020
+publicData: Sep 2020
 pagesCount: 1
-siteLink: https://ebook.igromov.digital/
+siteLink: https://demo.gromov.digital/ebook/
 pages:
   - page:
       - image: ../../assets/images/projects/project-270-ebook/0.png
