--- a/src/posts/projects/project-370-vr-jazz.mdx
+++ b/src/posts/projects/project-370-vr-jazz.mdx
@@ -3,9 +3,9 @@ slug: vr-jazz
 link: /projects/vr-jazz/
 category: "projects"
 title: Vr-jazz
-publicData: Sep 11th 2020
+publicData: Sep 2018
 pagesCount: 8
-siteLink: https://vrjazzagency.com/
+siteLink: https://www.behance.net/gallery/69706817/razrabotkaveb-dizajnverstkaintegracijavsego-sajta-VR
 pages:
   - page:
       - image: ../../assets/images/projects/project-370-vr-jazz/0.png
