--- a/src/posts/projects/project-450-webclim.mdx
+++ b/src/posts/projects/project-450-webclim.mdx
@@ -3,9 +3,9 @@ slug: webclim
 link: /projects/webclim/
 category: "projects"
 title: Webclim
-publicData: Sep 11th 2020
+publicData: Sep 2017
 pagesCount: 2
-siteLink: https://iliagromov.github.io/
+siteLink: https://www.behance.net/gallery/95769551/webclim
 pages:
   - page:
       - image: ../../assets/images/projects/project-450-webclim/0.png
