--- a/src/posts/projects/project-50-monte-ebay.mdx
+++ b/src/posts/projects/project-50-monte-ebay.mdx
@@ -3,9 +3,9 @@ slug: monte-ebay
 link: /projects/monte-ebay/
 category: "projects"
 title: Monte Ebay
-publicData: Sep 11th 2020
+publicData: Jan 2022
 pagesCount: 2
-siteLink: https://monte-ebay.igromov.digital/
+siteLink: https://demo.gromov.digital/monte-ebay/
 pages:
   - page:
       - image: ../../assets/images/projects/project-50-monte-ebay/0.png
