--- a/src/posts/projects/project-80-panda.mdx
+++ b/src/posts/projects/project-80-panda.mdx
@@ -3,9 +3,9 @@ slug: panda
 link: /projects/panda/
 category: "projects"
 title: Panda
-publicData: Sep 11th 2020
+publicData: Nov 2020
 pagesCount: 7
-siteLink: https://panda.igromov.digital/
+siteLink: https://demo.gromov.digital/panda/
 pages:
   - page:
       - image: ../../assets/images/projects/project-80-panda/0.png
