--- a/src/posts/projects/project-02-leily-yoga.mdx
+++ b/src/posts/projects/project-02-leily-yoga.mdx
@@ -1,15 +1,15 @@
 ---
-slug: cosmospose
-link: /projects/cosmospose/
+slug: leily-yoga
+link: /projects/leily-yoga/
 category: "projects"
-title: Лейла Йога
+title: Leily yoga
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://demo.gromov.digital/leily-yoga/
 pages:
   - page:
-      - image: ../../assets/images/projects/project-60-cosmospose/0.png
+      - image: ../../assets/images/projects/project-60-leily-yoga/0.png
       - title: Главная
-      - layout: ../../assets/images/projects/project-60-cosmospose/layout/0.png
+      - layout: ../../assets/images/projects/project-60-leily-yoga/layout/0.png
 sortIdx: 6
 ---
