--- a/src/posts/projects/project-02-leily-yoga-ru.mdx
+++ b/src/posts/projects/project-02-leily-yoga-ru.mdx
@@ -1,15 +1,15 @@
 ---
-slug: cosmospose
-link: /projects/cosmospose/
+slug: leily-yoga-ru
+link: /projects/leily-yoga-ru/
 category: "projects"
-title: Лейла Йога
+title: Лейла Йога Ru
 publicData: Feb 2022
 pagesCount: 1
-siteLink: https://demo.gromov.digital/leily-yoga/
+siteLink: https://demo.gromov.digital/leily-yoga-ru/
 pages:
   - page:
-      - image: ../../assets/images/projects/project-60-cosmospose/0.png
+      - image: ../../assets/images/projects/project-60-leily-yoga-ru/0.png
       - title: Главная
-      - layout: ../../assets/images/projects/project-60-cosmospose/layout/0.png
+      - layout: ../../assets/images/projects/project-60-leily-yoga-ru/layout/0.png
 sortIdx: 6
 ---
