--- a/src/posts/projects/project-01-tst.mdx
+++ b/src/posts/projects/project-01-tst.mdx
@@ -5,7 +5,7 @@ category: "projects"
 title: Проект Юлии Железняк
 publicData: Oct 2025
 pagesCount: 1
-siteLink: https://i.gromov.digital/
+siteLink: https://demo.gromov.digital/tst/
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-tst/0.png
